fix: add categories endpoint
